--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Kelly Lu Profolio</title>
-  <link rel="stylesheet" href="style.css"> 
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="welcome-section">
+    <h1>Hi, I'm Kelly.</h1>
+    <h3>This is my protfolio.</h3>
+  </div>
 
 </body>
 </html>
