--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
     <h1>Hi, I'm Kelly.</h1>
     <h3>This is my protfolio.</h3>
   </div>
-
+  <div id="projects">
+    <!-- Add links to each project tile -->
+    <div class="project-tile">
+      <p>Project 1</p>
+    </div>
+    <div class="project-tile">
+      <p>Project 2</p>
+    </div>
+    <div class="project-tile">
+      <p>Project 3</p>
+    </div>
+    <div class="project-tile">
+      <p>Project 4</p>
+    </div>
+  </div>
 </body>
 </html>
