navbar and contact

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav id="navbar">
+    <a href="#projects">Projects</a>
+    <a href="#profile-link">GitHub</a>
+    <a href="#contact">Contact</a>
+  </nav>
   <div id="welcome-section">
     <h1>Hi, I'm Kelly.</h1>
     <h3>This is my protfolio.</h3>
@@ -26,6 +31,9 @@
     <div class="project-tile">
       <p>Project 4</p>
     </div>
+  </div>
+  <div id="contact">
+    <p>My contact information</p>
   </div>
 </body>
 </html>
