--- a/index.html
+++ b/index.html
@@ -13,27 +13,30 @@
     <a href="#profile-link">GitHub</a>
     <a href="#contact">Contact</a>
   </nav>
-  <div id="welcome-section">
-    <h1>Hi, I'm Kelly.</h1>
-    <h3>This is my protfolio.</h3>
-  </div>
-  <div id="projects">
-    <!-- Add links to each project tile -->
-    <div class="project-tile">
-      <p>Project 1</p>
+  <div class="container">
+
+    <div id="welcome-section">
+      <h1>Hi, I'm Kelly.</h1>
+      <h3>This is my protfolio.</h3>
     </div>
-    <div class="project-tile">
-      <p>Project 2</p>
+    <div id="projects">
+      <!-- Add links to each project tile -->
+      <div class="project-tile">
+        <p>Project 1</p>
+      </div>
+      <div class="project-tile">
+        <p>Project 2</p>
+      </div>
+      <div class="project-tile">
+        <p>Project 3</p>
+      </div>
+      <div class="project-tile">
+        <p>Project 4</p>
+      </div>
     </div>
-    <div class="project-tile">
-      <p>Project 3</p>
+    <div id="contact">
+      <p>My contact information</p>
     </div>
-    <div class="project-tile">
-      <p>Project 4</p>
-    </div>
-  </div>
-  <div id="contact">
-    <p>My contact information</p>
   </div>
 </body>
 <footer>This is my footer</footer>
