--- a/index.html
+++ b/index.html
@@ -35,20 +35,31 @@ For now, the test suite only works in Chrome! Please read the README below in th
     <div id="projects">
       <!-- Add links to each project tile -->
       <div class="project-tile">
-        <p>Project 1</p>
+        <a href="https://github.com/alexmat2on/MEEP">
+          <p>MEEP</p>
+        </a>
       </div>
       <div class="project-tile">
-        <p>Project 2</p>
+        <a href="https://github.com/alexmat2on/Pictualize">
+          <p>Pictualize</p>
+        </a>
       </div>
       <div class="project-tile">
-        <p>Project 3</p>
+        <a href="https://klu01.github.io/hw3-p5-practice-with-html-css-forms-KLU01/">
+          <p>Forms</p>
+        </a>
       </div>
       <div class="project-tile">
-        <p>Project 4</p>
+        <a href="https://klu01.github.io/hw3-p4-personal-portfolio-practice-with-html-css-KLU01">
+          <p>Portfolio</p>
+        </a>
       </div>
     </div>
     <div id="contact">
       <p>My contact information</p>
+      <a id="profile-link" href="https://github.com/KLU01">
+        <p>GitHub Account</p>
+      </a>
     </div>
   </div>
 </body>
