--- a/index.html
+++ b/index.html
@@ -33,31 +33,30 @@ For now, the test suite only works in Chrome! Please read the README below in th
       <h3>This is my protfolio.</h3>
     </div>
     <div id="projects">
-      <!-- Add links to each project tile -->
       <div class="project-tile">
-        <a href="https://github.com/alexmat2on/MEEP">
+        <a href="https://github.com/alexmat2on/MEEP" target="_blank">
           <p>MEEP</p>
         </a>
       </div>
       <div class="project-tile">
-        <a href="https://github.com/alexmat2on/Pictualize">
+        <a href="https://github.com/alexmat2on/Pictualize" target="_blank">
           <p>Pictualize</p>
         </a>
       </div>
       <div class="project-tile">
-        <a href="https://klu01.github.io/hw3-p5-practice-with-html-css-forms-KLU01/">
+        <a href="https://klu01.github.io/hw3-p5-practice-with-html-css-forms-KLU01/" target="_blank">
           <p>Forms</p>
         </a>
       </div>
       <div class="project-tile">
-        <a href="https://klu01.github.io/hw3-p4-personal-portfolio-practice-with-html-css-KLU01">
+        <a href="https://klu01.github.io/hw3-p4-personal-portfolio-practice-with-html-css-KLU01" target="_blank">
           <p>Portfolio</p>
         </a>
       </div>
     </div>
     <div id="contact">
       <p>My contact information</p>
-      <a id="profile-link" href="https://github.com/KLU01">
+      <a id="profile-link" href="https://github.com/KLU01" target="_blank">
         <p>GitHub Account</p>
       </a>
     </div>
