--- a/index.html
+++ b/index.html
@@ -27,31 +27,33 @@ For now, the test suite only works in Chrome! Please read the README below in th
     </ul>
   </nav>
   <div class="container">
-
     <div id="welcome-section">
       <h1>Hi, I'm Kelly.</h1>
       <h3>This is my protfolio.</h3>
     </div>
     <div id="projects">
-      <div class="project-tile">
-        <a href="https://github.com/alexmat2on/MEEP" target="_blank">
-          <p>MEEP</p>
-        </a>
-      </div>
-      <div class="project-tile">
-        <a href="https://github.com/alexmat2on/Pictualize" target="_blank">
-          <p>Pictualize</p>
-        </a>
-      </div>
-      <div class="project-tile">
-        <a href="https://klu01.github.io/hw3-p5-practice-with-html-css-forms-KLU01/" target="_blank">
-          <p>Forms</p>
-        </a>
-      </div>
-      <div class="project-tile">
-        <a href="https://klu01.github.io/hw3-p4-personal-portfolio-practice-with-html-css-KLU01" target="_blank">
-          <p>Portfolio</p>
-        </a>
+      <p>Projects</p>
+      <div id="project-container">
+        <div class="project-tile">
+          <a href="https://github.com/alexmat2on/MEEP" target="_blank">
+            <p>MEEP</p>
+          </a>
+        </div>
+        <div class="project-tile">
+          <a href="https://github.com/alexmat2on/Pictualize" target="_blank">
+            <p>Pictualize</p>
+          </a>
+        </div>
+        <div class="project-tile">
+          <a href="https://klu01.github.io/hw3-p5-practice-with-html-css-forms-KLU01/" target="_blank">
+            <p>Forms</p>
+          </a>
+        </div>
+        <div class="project-tile">
+          <a href="https://klu01.github.io/hw3-p4-personal-portfolio-practice-with-html-css-KLU01" target="_blank">
+            <p>Portfolio</p>
+          </a>
+        </div>
       </div>
     </div>
     <div id="contact">
@@ -62,5 +64,7 @@ For now, the test suite only works in Chrome! Please read the README below in th
     </div>
   </div>
 </body>
-<footer>This is my footer</footer>
+<footer>This is my footer <br>
+<p>&copy; Portfolio of Kelly Lu</p>
+</footer>
 </html>
